<resources>
    <string name="app_name">Question</string>
    <string name="rank">ترتيبك</string>
    <string name="profile">الملف الشخصي</string>
    <string name="your_name">اسمك</string>
    <string name="item1">رياضه</string>
    <string name="item2">علوم</string>
    <string name="item3">دين</string>
    <string name="item4">معلومات</string>
    <string name="item5">قريبا</string>
    <string name="item6">قريبا</string>
    <string name="unit1">ca-app-pub-1041023466257355/8818162988</string>
    <string name="unit2">ca-app-pub-1041023466257355/5346370578</string>
    <string name="unit3">ca-app-pub-1041023466257355/1635190429</string>
    <string name="unit4">ca-app-pub-1041023466257355/6333925280</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions</string>
    <string-array name="general_info">
        <item> ما هو اقوى الحيوانات ذاكرة؟</item>
        <item>ما هو العنصر الغذائى الذى لو وجد ف الحليب لاصبح غذاء كامل ؟</item>
        <item>ما هو الحيوان الذى اذا قطعت إحدى أذرعته تنمو مرة اخرى ؟</item>
        <item>ما هو اسم المعدن الذى يكون ف الحالة السائلة؟</item>
        <item>ما هو الحيوان الذى يصاب بالحصبة كالانسان؟</item>
        <item>ما هى اكبر مدينة من مدن الدول الاوروبية؟</item>
        <item>ما هو الغاز المستخدم ف إطفاء الحرائق؟</item>
        <item>ما الحيوان الذي ينام وإحدى عينيه مفتوحة ؟</item>
        <item>ما هو الحيوان الذي لا يشرب الماء ؟</item>
        <item>ما هو الشئ الذى كله ثقوب و مع ذلك يحفظ الماء ؟</item>
        <item>كم كيلو غراما يساوي الطن ؟</item>
        <item> تقع دولة البحرين في قارة؟</item>
        <item>عائلة مكونة من 6 بنات و اخ لكل منهم فكم عد الافراد(بدون الاب و الام)؟</item>
        <item>ما هو الطعام الذى لا يفسد ولا يتعفن؟</item>
        <item>اطول حروب العالم كانت بين ؟</item>
        <item>ما هو اثقل حيوان ف العالم ؟</item>
        <item>نظام الحكم ف اليابان هو ؟</item>
        <item>اول بيت بنى ف الارض هو ؟</item>
        <item>اطلق على قيصر روسيا بطرس الاول لقب ؟</item>
        <item>العملة اليمانية هى ؟</item>
        <item>من هو الذى ينام ويرتدى حذاءه؟</item>
        <item>ما هو الشئ الذى اذا ذاد نقص ؟</item>
        <item>ما الرقم الزى ياتى بعد 60.28.12.4؟</item>
        <item>ما الرقم الناقص  فى السلسلة 7.11.13.?.2.3 ؟ </item>
        <item>إذا كان كتاب فى الرف هو الرابع من جهة اليسار والسادس من جهة اليمين .كم كتاب يوجد ف الرف؟</item>
        <item>لو 5 قطط تلتقط 5 فئران فى 5 دقائق .كم من قطة نحتاج لإلتقاط 100 فأر فى 100 دقيقة</item>
        <item>ما الجزء الوحيد في جسم الإنسان الذي لا يصله الدم ؟</item>
        <item>من هو أول من عرف أن سرعة الضوء أكبر من سرعة الصوت ؟</item>
        <item>من أي الدول تنبع نهر الرين ؟</item>
        <item>ما الدولة الافريقية التي عاصمتها زامبيا ؟</item>
        <item>على أي البلاد اطلق لقب جوهرة الإمبراطورية البريطانية قديما ؟</item>
        <item>عدد العضلات المستقلة التي تمتلكها الجرادة مع العلم أن الإنسان يمتلك مالا يقل عن 700 عضلة مستقلة ؟</item>
        <item>قائل لولا أن الموت أتاني لجعلت كل الدول الأوروبية إسلامية ؟</item>
        <item>له أوراق … و ما هو بنبات ، وله جلد … و ما هو بحيوان ، و يعلم … و ما هو بإنسان، فما هو ؟</item>
        <item>من الذي يقوم بالدفاع عن الجسم ضد الجراثيم و الأمراض ؟</item>
        <item>ما هي المادة المسئولة عن تلون جسم الإنسان بالألوان الغامضة ؟</item>
        <item>ما هو الشيء الوحيد الذي لا يقبل التغيير في جسم الإنسان ؟</item>
        <item>ما هو المرض الذي أهلك نصف سكان أوروبا في القرن الحادي عشر ؟</item>
        <item>كم عدد السعرات الحرارية في كأس الماء ؟</item>
        <item>كم تقدر المسافة التي يقطعها الدم في اليوم أثناء دورانه في الجسم ؟</item>
        <item>ما هو الوعاء الذي يحمل الدم من القلب إلى أجزاء الجسم ؟</item>
        <item>من القائل (لو تسلم زمام الحكم في العالم رجل كمحمد لقاده الى حل جميع مشاكله) ؟</item>
        <item>ماهي أكبر دوله عربيه مساحه ؟</item>
        <item>مااسم الملكه الاسبانيه التي ساعدت كولمبس على اكتشاف أمريكا ؟</item>
        <item>كم خلية دم حمراء يستطيع أنتاجها الجسم في اليوم الواحد ؟</item>
        <item>من هي الدوله التي ليس لديها جيش ؟</item>
        <item>ماأسم أول مترجم للقرآن باللغه الاسبانيه ؟</item>
        <item>أين توجد أطول سكة حديد في العالم ؟</item>
        <item>من هي اكبر حرب عالميه ؟</item>
        <item>من هو مخترع الطائرة ذات المحرك ؟</item>
        <item>من هو النبي الذي ابيع كعبد باربعمائه درهم ؟</item>
        <item>ماعدد الايام الذي خلقت فيه الارض والسماء ؟</item>
        <item>ماهو النهر الوحيد في العالم ينبع من الجنوب إلى الشمال ؟</item>
        <item>ماأسم عاصمه كازاخستان الحالية ؟</item>
        <item>دولة عربية أولها الف ولام وآخرها الف ولام ووسطها ركن من أركان الاسلام ؟</item>
        <item>عند من تعتبر زهره اللوتس زهره مقدسه ؟</item>
        <item>ماهي اللغه الرسميه للبرازيل ؟</item>
        <item>مامعنى (أستكنديارد) ؟</item>
        <item>من هو الخليفه العباسي الذي حكم يوم واحد فقط ؟</item>
        <item>كم عدد الجيوب الانفيه في الانسان ؟</item>
        <item>كم عدد أسنان القط ؟</item>
        <item>ما هو الحيوان الذي يأكل صغاره إذا جاع ؟</item>
        <item>ماهي أصغر دوله عربيه مساحه ؟</item>
        <item>ماهو علم السيتولوجيا ؟</item>
        <item>ماهو علم الانثروبيلوجي ؟</item>
        <item>ماهو علم الميتورولوجيا ؟</item>
        <item> ماهو الجيولوجيا ؟</item>
        <item> ما هو علم السوسيولوجيا ؟</item>
        <item> ماهي لغه التخاطب عند النحل ؟</item>
        <item>من الذي وضع القسم الطبي ؟</item>
        <item>في أي شهر تبدأ شعر رأس الجنين وحواجبه بالظهور ؟</item>
        <item>من العالم العربي الذي اهتم بالنباتات الطبية ؟</item>
        <item>كم يبلغ طول المعدة عند الإنسان ؟</item>
        <item>في أي شهر يبدأ الطفل في سماع صوت أعضاء أمه ؟</item>
        <item>ما هو الفرع الطبي الذي يدرس أنسجة الجسم ؟</item>
        <item>من الطبيب الذي كان أول من وصف التهاب الزائدة الدودية ؟</item>
        <item>من هو الطبيب الذي أول من سمى مرض السكر بهذا الاسم ؟</item>
        <item>من أول من أكتشف القناة السمعية في الجسم ؟</item>
        <item>من مؤسس علم الأجنة ؟</item>
        <item>ما هي المادة الأساسية في الموز ؟</item>
        <item>ما هي أكثر أعضاء الجسم حساسية ؟</item>
        <item>ما هو مصدر البروتينات في اللحوم ؟</item>
        <item>ما هو المعدن الأساسي في اللبن و الحليب ؟</item>
        <item>من هي أول طبيبة في العالم ؟</item>
        <item>من هي أول ممرضة في العصر الحديث ؟</item>
        <item>من الطبيب العربي الذي أعتمد المداواة بالعلاج بدل الجراحة ؟</item>
        <item>ما هي المادة الأساسية في البيض ؟</item>
        <item>في رأس الطفل موضع طري و متحرك ، ما هو ؟</item>
        <item>ما لون كريات الدم البيضاء ؟</item>
        <item>ما هي أكبر غدة في الجسم ؟</item>
        <item>ما هي المادة الأساسية في العنب ؟</item>
        <item>ما هو الحيوان الذي يموت إذا فتحت فمه لأكثر من دقيقة حيث أنه لا يتنفس وفمه مفتوح ؟</item>
        <item>من هي عالمة الذرة المصرية التي قـُـتِلت عام (1952) م في أمريكا في حادث سيارة ؟</item>
        <item>من هي الدولة الأولى التي أقرّت بحق المرأة في الإنتخاب, ومنحها هذا الحق؟</item>
        <item>فى أى عام تم تحديد خط الطول جرينتش كمقياس لخطوط الطول الأخرى؟</item>
        <item>من هو مخترع المسدس؟</item>
        <item>تكتب اللغة العربية بعدة خطوط منها الرقعة والنسخ والكوفى فأى تلك الخطوط أقدمها ؟</item>
        <item>اسم مرفوع يكون مع المبتدأ جملة مفيدة يعرف بماذا ؟</item>
        <item>ماهو المكان الوحيد في انجلترا الذي لا يسمح لملكة انجلترا بدخوله؟</item>
        <item>ماذا تعني كلمة اسكيمو بلغة اهلها؟</item>
        <item>من هو النبي الذي كانت معجزته احياء الموتى ؟</item>
        <item>من الكتب السماوية الزبور على من انزل ؟</item>
        <item>ماهي أصغر قارة في العالم؟</item>
        <item>من هو النبي الذي ابتلاه الله بالمرض فصبر وشكر ؟</item>
        <item>عمتك اخت ابوك خال ابنها يبقى مين ؟</item>
        <item>أول من ركب الخيل هو؟</item>
        <item>أول أولاد آدم عليه السلام هو</item>
        <item>أول من كتب ( بسم الله الرحمن الرحيم )؟</item>
        <item>أول من خط و خاط هو؟</item>
    </string-array>
    <string-array name="GI_RightAns">
        <item>الجمل</item>
        <item>الحديد</item>
        <item>نجمة البحر</item>
        <item>الزئبق</item>
        <item>القرد</item>
        <item>لندن</item>
        <item>ثانى اكسيد الكربون</item>
        <item>الدرفيل</item>
        <item>الكنغر البرى</item>
        <item>الاسفنج</item>
        <item>1000كجم</item>
        <item>اسيا</item>
        <item>7</item>
        <item>العسل</item>
        <item>فرنسا و بريطانيا</item>
        <item>الحوت الازرق</item>
        <item>امبراطورى</item>
        <item>الكعبة المشرفة</item>
        <item>بطرس العظيم</item>
        <item>ريال</item>
        <item>الحصان</item>
        <item>العمر</item>
        <item>124</item>
        <item>5</item>
        <item>9</item>
        <item>5</item>
        <item>قرنية العين</item>
        <item>البيرونى</item>
        <item>سويسرا</item>
        <item>لوساكا</item>
        <item>الهند</item>
        <item>900</item>
        <item>صلاح الدين الايوبى</item>
        <item>الكتاب</item>
        <item>كرات الدم البيضاء</item>
        <item>الميلانين</item>
        <item>الخلايا العصبية</item>
        <item>الطاعون</item>
        <item>صفر</item>
        <item>250الف كيلومتر</item>
        <item>الشريان</item>
        <item>جورج برناردشو</item>
        <item>الجزائر</item>
        <item>ايزابيلا الاولى</item>
        <item>200مليون</item>
        <item>سويسرا</item>
        <item>ابراهام طليطلة</item>
        <item>كندا</item>
        <item>الحروب الصليبية</item>
        <item>الاخوين رايت</item>
        <item>الخضر(عليه السلام)</item>
        <item>6ايام</item>
        <item>نهر النيل</item>
        <item>استانا</item>
        <item>الصومال</item>
        <item>الفراعنة</item>
        <item>البرتغالية</item>
        <item>المخابرات البريطانية</item>
        <item>عبد الله بن المعتز</item>
        <item>8 جيوب</item>
        <item>40 سنة</item>
        <item>النمر</item>
        <item>البحرين</item>
        <item>علم الخلايا</item>
        <item>علم الاجناس</item>
        <item>علم الارصاد الجوية</item>
        <item>علم الارض</item>
        <item>علم الاجتماع</item>
        <item>الرقص ف الهواء</item>
        <item>أبقراط</item>
        <item>الشهر الخامس</item>
        <item>ابن البيطار</item>
        <item>25سم</item>
        <item>الشهر السادس</item>
        <item>علم النسج</item>
        <item>توماس اديسون</item>
        <item>ارتيايوس</item>
        <item>الكمايون</item>
        <item>الكمايون</item>
        <item>النشويات</item>
        <item>الشفاه</item>
        <item>ألاحماض الامينية</item>
        <item>الكالسيوم</item>
        <item>اليزابيث بلاكويل</item>
        <item>فلورانس نايتينجيل</item>
        <item>ابن زهر الاندلس</item>
        <item>البروتين</item>
        <item>اليافوخ</item>
        <item>عديمة اللون</item>
        <item>الكبد</item>
        <item>السكروز</item>
        <item>الضفدع</item>
        <item>سميرة موسى</item>
        <item>سويسرا</item>
        <item>1884م</item>
        <item>صمويل كولت</item>
        <item>الخط الكوفى</item>
        <item>الخبر</item>
        <item>مجلس العموم البريطانى</item>
        <item>اكلى اللحم النئ</item>
        <item>عيسى(عليه السلام)</item>
        <item>داوود(عليه السلام)</item>
        <item>استراليا</item>
        <item>أيوب(عليه السلام)</item>
        <item>أبوك</item>
        <item>إسماعيل(عليه السلام)</item>
        <item>قابيل</item>
        <item>سليمان(عليه السلام)</item>
        <item>إدريس(عليه السلام)</item>
    </string-array>
</resources>